fix(scss): 修改dark mode细节

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -66,7 +66,7 @@
   }
 
   .yoyoyo-header .header-description {
-    color: #ffffff;
+    opacity: 0.8;
   }
 }
 
