--- a/_sass/highlight.scss
+++ b/_sass/highlight.scss
@@ -2,7 +2,8 @@
   padding: 1rem 1rem 1px;
   margin: 1rem 0 1.5rem;
   border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 16px 40px;
+  box-shadow: 0 0 1px 0 rgba(8, 11, 14, 0.06),
+    0 16px 16px -1px rgba(8, 11, 14, 0.1);
   position: relative;
   z-index: 1;
   // background-color: #121212;
